# final_project

./: CMakeLists.txt  README.md  Untitled Diagram.drawio  sdkconfig  sdkconfig.old
libraries/cJSON/: CMakeLists.txt
libraries/cJSON/cJSON/: cJSONFilePaths.cmake
libraries/cJSON/cJSON/source/: cJSON.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  aws.c  aws.h  buzzer.c  buzzer.h  demo_config.h  mqtt_demo_mutual_auth.c  nextion.c  nextion.h  pzem.c  pzem.h
main/certs/: client.crt  client.key
